syntax = "proto3";

package proto;

option go_package = "github.com/RaymondAkachi/VAULT-API/proto;authpb";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string message = 1;
  string token = 2;
}
